--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="bg-dark text-white">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <div class="container-fluid text-center">
-      <h1>Rock Paper Scissor</h1>
+      <h1>Rock Paper Scissors</h1>
       <hr>
       <div class="flex">
         <h2>Comp: <span id="comp"></span></h2>
@@ -20,7 +20,7 @@
       <div class="btn-group btn-group-lg" role="group">
         <button type="button" id="1" class="btn btn-secondary">Rock</button>
         <button type="button" id="2" class="btn btn-secondary">Paper</button>
-        <button type="button" id="3" class="btn btn-secondary">Scissor</button>
+        <button type="button" id="3" class="btn btn-secondary">Scissors</button>
       </div>
       <hr>
       <h2 id="result"></h2>
